Make some commands ready for production